log/build_2025-11-11_12-21-21/my_first_package/stderr.log
  File "/home/hyh/install/my_first_package/lib/python3.10/site-packages/my_first_package/my_custom_publisher.py", line 31
    			break
    			^^^^^
SyntaxError: 'break' outside loop

